<resources>
    <string name="app_name">HydrationDetect</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


    <!-- Strings used in personal_information -->
    <string name="tell_us_about_yourself">Tell us about yourself</string>
    <string name="we_use_the_information">We use this information to customize your experience</string>
    <string name="name">Name</string>
    <string name="gender">Gender</string>
    <string name="birthday">Birthday(Ex: 09/25/1984)</string>
    <string name="height">Height(cm)</string>
    <string name="weight">Weight(kg)</string>
    <string name="what_is_activity_level">What is your activity level?</string>
    <string name="title_activity_personal_information">personal_information</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="activity_high">Go to the gym or do sports more than three times per week</string>
    <string name="activity_middle">Go to the gym or do sports around one to three times per week</string>
    <string name="activity_low">Go to the gym or do sports less than once per week</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_hydration_status">HydrationStatus</string>

    <!-- Strings used in hydration status -->
    <string name="dear">Dear</string>
    <string name="name_from_input">BlaBlaBla</string>
    <string name="daily_record">Daily Record</string>
    <string name="weekly_record">Weekly Record</string>
    <string name="Monthly_record">Monthly Record</string>
    <string name="title_activity_daily_record">daily_record</string>
    <string name="title_activity_weekly_record">weekly_record</string>
    <string name="title_activity_monthly_record">monthly_record</string>


</resources>
